--- a/src/styles.css
+++ b/src/styles.css
@@ -27,8 +27,8 @@ body {
 }
 
 div.selected {
-  border: 1px solid #e03131;
-  background-color: #e03131;
+  border: 1px solid #50c878;
+  background-color: #50c878;
   color: #fff;
   font-weight: bold;
 }
